atualizando p/ necessidades do trabalho

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ project(ArvoreBinaria)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ArvoreBinaria main.cpp treenode.h tree.h)
+add_executable(ArvoreBinaria treeModule.h treenode.h tree.h main.cpp cmake-build-debug/linearSearch.cpp linearSearch.cpp)
